# icepatchnet

./: LICENSE  README.md  pyproject.toml
src/icepatchnet/: __init__.py  model.py  utils.py
